--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Material Icons-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Archivo css-->
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<nav class="navbar navbar-default">
